<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="agroconnectapp.agroconnect.in.agroconnect.NumberVerificationActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/d16"
        android:gravity="center"
        android:text="@string/enter_number"/>

    <EditText
        android:id="@+id/mobile_number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="@dimen/d20"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/btn_submit"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d12"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/reenter_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/f16"
        android:gravity="center"
        android:text="@string/reenter_number"
        android:textColor="@android:color/holo_blue_dark"
        android:visibility="gone"
        android:layout_marginTop="@dimen/d20"/>

</LinearLayout>
