<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:id="@+id/headerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_language"
        android:textColor="@color/color_black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/englishLayout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/englishTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/english"
                android:drawablePadding="10dp"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hindiLayout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hindiTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hindi"
                android:drawablePadding="10dp"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/color_white"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray"/>

        <Button
            android:id="@+id/setBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/set"
            android:textAllCaps="false"
            android:textColor="@color/color_white"/>
    </LinearLayout>

</LinearLayout>
