<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="agroconnectapp.agroconnect.in.agroconnect.EditProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d16"
        android:textSize="16sp"
        android:text="@string/profile_img_caption" />
    <ImageView
        android:id="@+id/profile_iv"
        android:layout_width="@dimen/d80"
        android:layout_height="@dimen/d80"
        android:src="@drawable/default_profile_img"
        android:layout_marginTop="@dimen/d16"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:id="@+id/spinner_agent_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/d10"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d16" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d16"
        android:layout_marginRight="@dimen/d16"
        android:layout_marginTop="@dimen/d10"
        android:layout_marginBottom="@dimen/d8"
        android:textSize="16sp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:textColor="@android:color/black"
        android:hint="@string/hint_name" />

    <TextView
        android:id="@+id/city_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20"
        android:layout_marginBottom="@dimen/d8"
        android:paddingTop="@dimen/d6"
        android:paddingLeft="@dimen/d2"
        android:paddingBottom="@dimen/d4"
        android:textSize="16sp"
        android:background="@drawable/bottom_border"
        android:textColor="@android:color/black"
        android:hint="@string/location" />

        <LinearLayout
            android:id="@+id/advisor_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/organization_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d16"
                android:layout_marginRight="@dimen/d16"
                android:layout_marginBottom="@dimen/d8"
                android:textSize="16sp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"
                android:hint="@string/organization" />
            <EditText
                android:id="@+id/department_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d16"
                android:layout_marginRight="@dimen/d16"
                android:layout_marginBottom="@dimen/d8"
                android:textSize="16sp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"
                android:hint="@string/department" />
            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d16"
                android:layout_marginRight="@dimen/d16"
                android:layout_marginBottom="@dimen/d8"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"
                android:hint="@string/email" />

        </LinearLayout>

    <TextView
        android:id="@+id/commodity_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20"
        android:layout_marginBottom="@dimen/d8"
        android:paddingTop="@dimen/d6"
        android:paddingLeft="@dimen/d2"
        android:paddingBottom="@dimen/d4"
        android:textSize="16sp"
        android:background="@drawable/bottom_border"
        android:textColor="@android:color/black"
        android:hint="@string/hint_commodity" />

    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/d16"
        android:layout_marginRight="@dimen/d16"
        android:layout_marginBottom="@dimen/d8"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:hint="@string/user_desciption" />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d16"
        android:text="@string/button_save"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
