<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/d36"
    android:paddingRight="@dimen/d36"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d24"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:text="@string/action_language"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/d16"
        android:layout_marginBottom="@dimen/d24"
        android:orientation="vertical">
        <Button
            android:id="@+id/english_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d8"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/english"/>

        <Button
            android:id="@+id/hindi_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d8"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/hindi"/>

    </LinearLayout>

</LinearLayout>
